2011-12-02  Albert Chu <chu11@llnl.gov>

	* ipmi-pet/src/: Fix warning.
	
2011-12-02  Albert Chu <chu11@llnl.gov>

	* Update IANA Enterprise validity macro.
	
2011-12-01  Albert Chu <chu11@llnl.gov>

	* Various documentation updates.

	* Update copyright years for release in 2012.

2011-11-30  Albert Chu <chu11@llnl.gov>

	* Various documentation updates.
	
2011-11-28  Albert Chu <chu11@llnl.gov>

	* bmc-watchdog/src/bmc-watchdog.c (_daemon_cmd_error_exit)
	(_daemon_cmd_error_noexit): Do not assume semaphore deleted on
	EINVAL.
	
2011-11-18  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/api/: Common function code cleanup.

	* libfreeipmi/src/spec/: Update iana numbers list.
	
2011-11-18  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/api/: Remove duplicate parameter checks.  Write
	common functions for variety of code.
	
2011-11-18  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/: Add support for IPMI firmware firewall and command
	discovery payloads.  Perform some code cleanup.
	
2011-11-16  Albert Chu <chu11@llnl.gov>

	* Continued code cleanup.  Remove unnecessary null checks.
	Remove excessive/unnecessary initializations.  Fix minor bugs.
	Fix code inconsistency styles.  Remove unused functions.

	* Update additional documentation about new ipmi-pet tool.
	
2011-11-15  Albert Chu <chu11@llnl.gov>

	* Code cleanup and minor fixes.  Remmove unnecessary if checks for
	free() globally.  Remove excessive initializations.  Fix minor
	bugs.
	
2011-11-15  Albert Chu <chu11@llnl.gov>

	* Support IPMI_FLAGS_NOSESSION in libfreeipmi.

	* libfreeipmi/include/freeipmi/record-format/ipmi-platform-event-trap-record-format.h:
	Support macros for sequence number.

	* Support --pet-acknowledge in ipmi-pet.
	
2011-11-15  Albert Chu <chu11@llnl.gov>

	* ipmi-pet/ipmi-pet.8.pre.in: Add examples.

2011-11-15  Kaiwang Chen <kaiwang.chen@gmail.com>

	* contrib/pet/petalert.pl: Support various new features.
	
2011-11-14  Albert Chu <chu11@llnl.gov>
