@@ -210,7 +210,9 @@ the problem.  Please see the WORKAROUNDS section below for possible
 workarounds too.
 
 #include <@top_srcdir@/common/man/manpage-common-workaround-heading-text.man>
-#include <@top_srcdir@/common/man/manpage-common-workaround-sol-only-text.man>
+#include <@top_srcdir@/common/man/manpage-common-workaround-outofband-common-text.man>
+#include <@top_srcdir@/common/man/manpage-common-workaround-outofband-20-text.man>
+#include <@top_srcdir@/common/man/manpage-common-workaround-sol-text.man>
 #include <@top_srcdir@/common/man/manpage-common-known-issues.man>
 .LP
 Some motherboards define an OEM SOL inactivity timeout for SOL
