@@ -409,7 +409,9 @@ not matter when running in interactive mode or with
 since it is a one-time setup cost.
 
 #include <@top_srcdir@/common/man/manpage-common-workaround-heading-text.man>
-#include <@top_srcdir@/common/man/manpage-common-workaround-outofband-text.man>
+#include <@top_srcdir@/common/man/manpage-common-workaround-outofband-common-text.man>
+#include <@top_srcdir@/common/man/manpage-common-workaround-outofband-15-text.man>
+#include <@top_srcdir@/common/man/manpage-common-workaround-outofband-20-text.man>
 #include <@top_srcdir@/common/man/manpage-common-known-issues.man>
 .LP
 IPMI specifications do not require BMCs to perform a power control
